<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView_post"
        android:layout_gravity="center"
        android:layout_width="250dp"
        android:layout_height="150dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="match_parent"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="6dp"
        android:elevation="4dp"
        android:layout_height="wrap_content"
        android:text="@string/title" />

    <TextView
        android:id="@+id/textView_date"
        android:textSize="12sp"
        android:padding="4dp"
        android:elevation="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date" />

    <TextView
        android:id="@+id/textView_description"
        android:textSize="12sp"
        android:padding="4dp"
        android:elevation="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description" />

</LinearLayout>