<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.eventDetails.EventDetailsActivity"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:id="@+id/imageView_mainPost"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="center"
                android:fitsSystemWindows="true"
                android:src="@drawable/error"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/Theme.AppCompat.DayNight.DarkActionBar" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <!--     Nested Scroll View        -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.eventDetails.EventDetailsActivity"
        tools:showIn="@layout/activity_event_details">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                android:layout_marginTop="24dp"
                android:padding="8dp"
                android:text="@string/title"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_date"
                android:textSize="16sp"
                android:padding="8dp"
                android:elevation="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date" />

            <TextView
                android:id="@+id/textView_price"
                android:textSize="16sp"
                android:padding="8dp"
                android:elevation="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price" />

            <TextView
                android:id="@+id/textView_description"
                android:textSize="18sp"
                android:padding="8dp"
                android:elevation="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description" />



        </LinearLayout>



    </androidx.core.widget.NestedScrollView>



    <!--     Nested Scroll View       -->


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
        android:layout_marginEnd="0dp"
        app:srcCompat="@android:drawable/ic_menu_share" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_checkin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="85dp"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@android:drawable/star_big_on" />








</androidx.coordinatorlayout.widget.CoordinatorLayout>